--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.17.10",
+    "@types/method-override": "^0.0.35",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
     "@types/tedious": "^4.0.14",
@@ -30,6 +31,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
