--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/method-override": "^0.0.35",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
-    "@types/tedious": "^4.0.14",
+    "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "joi": "^17.11.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
@@ -38,6 +39,6 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
-    "tedious": "^16.6.1"
+    "uuid": "^9.0.1"
   }
 }
